# AdventOfCode2019

./: .gitignore  stack.yaml
day1/: day1.cabal
day1/executable/: Main.hs
day1/test-suite/: Day1Spec.hs
day2/: day2.cabal
day2/executable/: Main.hs
day3/: day3.cabal
day3/executable/: Main.hs
day3/test-suite/: Day3Spec.hs
day4/: day4.cabal
day4/executable/: Main.hs
day4/test-suite/: Day4Spec.hs
day5/: day5.cabal
day5/executable/: Main.hs
day6/: day6.cabal
day6/executable/: Main.hs
day6/test-suite/: Day6Spec.hs
day7/: day7.cabal
day7/executable/: Main.hs
day7/test-suite/: Day7Spec.hs
intcode/: intcodeAM.cabal
intcode/src/: Intcode.hs
intcode/test-suite/: IntcodeSpec.hs
util/: utilAM.cabal
util/src/: Util.hs
util/test-suite/: UtilSpec.hs
