cabal-version:       2.4
name:                day1
version:             0.1.0.0
build-type:          Simple
author:              Anne Marije van der Meer
maintainer:          anne.marije.meer@gmail.com

library
  exposed-modules: Day1
  hs-source-dirs: library
  build-depends: base

executable day1
  main-is:             Main.hs
  build-depends:       base, day1
  hs-source-dirs:      executable
  default-language:    Haskell2010

test-suite hspec
    build-depends:    base, day1, hspec
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    Other-Modules:    Day1Spec
    type:             exitcode-stdio-1.0