cabal-version:       2.4
name:                day2
version:             0.1.0.0
build-type:          Simple
author:              Anne Marije van der Meer
maintainer:          anne.marije.meer@gmail.com

library
  exposed-modules: Day2
  hs-source-dirs: library
  build-depends: base, intcodeAM, lens
  default-language:    Haskell2010


executable day2
  main-is:             Main.hs
  build-depends:       base, day2, split
  hs-source-dirs:      executable
  default-language:    Haskell2010

-- test-suite hspec
--     build-depends:    base, day2, hspec
--     default-language: Haskell2010
--     hs-source-dirs:   test-suite
--     main-is:          Spec.hs
--     Other-Modules:    Day2Spec
--     type:             exitcode-stdio-1.0