cabal-version:       2.4
name:                day6
version:             0.1.0.0
build-type:          Simple
author:              Anne Marije van der Meer
maintainer:          anne.marije.meer@gmail.com

library
  exposed-modules: Day6
  hs-source-dirs: library
  build-depends: base, split, mtl

executable day6
  main-is:             Main.hs
  build-depends:       base, day6
  hs-source-dirs:      executable
  default-language:    Haskell2010

test-suite hspec
    build-depends:    base, day6, hspec
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    Other-Modules:    Day6Spec
    type:             exitcode-stdio-1.0