cabal-version:       2.4
name:                day7
version:             0.1.0.0
build-type:          Simple
author:              Anne Marije van der Meer
maintainer:          anne.marije.meer@gmail.com

library
  exposed-modules: Day7
  hs-source-dirs: library
  build-depends: base, intcodeAM, lens, containers
  default-language:    Haskell2010

executable day7
  main-is:             Main.hs
  build-depends:       base, day7, split
  hs-source-dirs:      executable
  default-language:    Haskell2010

test-suite hspec
  build-depends:    base, day7, hspec
  default-language: Haskell2010
  hs-source-dirs:   test-suite
  main-is:          Spec.hs
  Other-Modules:    Day7Spec
  type:             exitcode-stdio-1.0