cabal-version:       2.4
name:                intcodeAM
version:             0.1.0.0
build-type:          Simple
author:              Anne Marije van der Meer
maintainer:          anne.marije.meer@gmail.com

library
  exposed-modules: Intcode
  hs-source-dirs: src
  build-depends: base, lens

test-suite hspec
    build-depends:    base, intcodeAM, hspec
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    Other-Modules:    IntcodeSpec
    type:             exitcode-stdio-1.0