cabal-version:       2.4
name:                utilAM
version:             0.1.0.0
build-type:          Simple
author:              Anne Marije van der Meer
maintainer:          anne.marije.meer@gmail.com

library
  exposed-modules: Util
  hs-source-dirs: src
  build-depends: base
  default-language: Haskell2010


test-suite hspec
    build-depends:    base, utilAM, hspec
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    Other-Modules:    UtilSpec
    type:             exitcode-stdio-1.0